fix in case of overflowing

--- a/pages/styles/index.module.scss
+++ b/pages/styles/index.module.scss
@@ -79,9 +79,12 @@
   padding-left: 1rem;
   padding-right: 1rem;
   padding-bottom: 33vh;
+  max-height: 90vh;
+  overflow-y: scroll;
 
   @include mixins.breakpoint-up(md) {
     top: calc(100vh - 3.5rem);
+    max-height: 80vh;
   }
 }
 
